src/main/java/com/example/englishmaster_be/shared/invalid_token/dto/request/InvalidTokenSaveRequest.java
package com.example.englishmaster_be.shared.invalid_token.dto.request;

import lombok.*;
import lombok.experimental.FieldDefaults;

import java.util.Date;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
@Builder
@FieldDefaults(level = AccessLevel.PRIVATE)
public class InvalidTokenSaveRequest {

    String token;

    Date expireTime;
}
